--- a/src/styles.scss
+++ b/src/styles.scss
@@ -263,7 +263,7 @@ mat-dialog-container {
     .bubble-footer {
       position: absolute;
       top: 76vh;
-      left: 17%;
+      left: 14%;
       background: var(--ob-blue);
       height: fit-content;
       width: fit-content;
@@ -334,6 +334,15 @@ mat-dialog-container {
 }
 
 @media screen and (max-width: 600px) {
+  html,
+  body {
+    height: fit-content;
+    overflow-y: auto;
+    overflow-x: initial;
+    * {
+      font-family: p22-stickley-pro-text, serif;
+    }
+  }
   .dialog-container::after {
     content: "";
     width: 100%;
